<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".mainscreen.MainScreenFragment">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/homescreen_with_black_mode_background_mask">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/top_background"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="119dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="545dp"
            android:fontFamily="@font/modern_antiqua"
            android:gravity="center_horizontal"
            android:letterSpacing="0.08"
            android:textColor="#eea86c"
            android:textSize="39.5sp"
            android:textStyle="normal"
            android:text="@string/M"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="M" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="119dp"
            android:layout_marginTop="126dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="528dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:letterSpacing="0.08"
            android:lineSpacingExtra="-1.3sp"
            android:textColor="#ffffff"
            android:textSize="11.8sp"
            android:textStyle="bold"
            android:text="@string/manifesto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Manifesto" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="316dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="314dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:letterSpacing="0.01"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="@string/noRecords"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:text="No one has currently signed in.
Be the first to sign.  " />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="79dp"
            android:layout_marginTop="570dp"
            android:layout_marginEnd="79dp"
            android:layout_marginBottom="56dp"
            android:backgroundTint="#eea86c"
            android:text="@string/sign_in_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>