<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.manifesto.signin.SignInViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_background_mask">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="119dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="119dp"
                android:layout_marginBottom="582dp"
                android:fontFamily="@font/modern_antiqua"
                android:gravity="center_horizontal"
                android:letterSpacing="0.08"
                android:text="@string/M"
                android:textColor="#EF6C00"
                android:textSize="39.5sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="M" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="119dp"
                android:layout_marginTop="89dp"
                android:layout_marginEnd="119dp"
                android:layout_marginBottom="565dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center_horizontal"
                android:letterSpacing="0.08"
                android:lineSpacingExtra="-1.3sp"
                android:text="@string/manifesto"
                android:textColor="#ffffff"
                android:textSize="11.8sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Manifesto" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="26dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fullNameTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:helperText="@{viewModel.nameError}"
                    app:helperTextTextColor="@android:color/holo_red_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullNameTIET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="textPersonName"
                        android:onTextChanged="@{(text, start, before, count) -> viewModel.updateName(text) }"
                        android:text="@{viewModel._fullname}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    app:helperText="@{viewModel.phoneError}"
                    app:helperTextTextColor="@android:color/holo_red_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumberTIET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="phone"
                        android:onTextChanged="@{(text, start, before, count) -> viewModel.updateNumber(text) }" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:helperText="@{viewModel.emailError}"
                    app:helperTextTextColor="@android:color/holo_red_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailTIET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="textWebEmailAddress"
                        android:onTextChanged="@{(text, start, before, count) -> viewModel.updateEmail(text) }" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emergencyContactTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emergency_contact_number"
                    app:helperText="@{viewModel.emergencyContactNumberError}"
                    app:helperTextTextColor="@android:color/holo_red_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emergencyContactNumberTIET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="phone"
                        android:onTextChanged="@{(text, start, before, count) -> viewModel.updateEmergencyContactNumber(text) }" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emergencyContactNameTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emergency_contact_name"
                    app:helperText="@{viewModel.emergencyContactNameError}"
                    app:helperTextTextColor="@android:color/holo_red_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emergencyContactNameTIET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="textPersonName"
                        android:onTextChanged="@{(text, start, before, count) -> viewModel.updateEmergencyConntactName(text) }" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/sasButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="53dp"
                    android:layout_marginEnd="53dp"
                    android:onClick="@{() -> viewModel.newGuest()}"
                    android:text="@string/save_and_sign" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:foregroundGravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:srcCompat="@drawable/group_8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>